Updated modal z-index to appear above fixed header. Closes #312

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -29,6 +29,8 @@ h5 { font: bold 14px Arial, Helvetica, sans-serif; color: #333; margin-bottom: 3
 }
 a.btn { color: #fff; cursor: pointer; }
 
+.modal { z-index: 2132; }
+.modal-backdrop { z-index: 2122; }
 .modal-header { background-color: #f1f1f1; border-radius: 4px 4px 0 0; }
 .modal-header h3 { font: normal 20px Georgia, serif; }
 .modal-header .close { margin-top: -3px; }
@@ -567,7 +569,7 @@ a.btn { color: #fff; cursor: pointer; }
 .combos button { display: block; margin: 9px auto 0 auto; }
 
 /* Combinations */
-#combinations-modal { width: 80%; left: 10%; top: 120px; margin: 0; }
+#combinations-modal { width: 80%; left: 10%; top: 10%; margin: 0; }
 #combinations-modal b {
 	font-weight: normal;
 	font-family: StateFaceRegular;
